Home index css+html

--- a/CosmeticShop/CosmeticShop/Views/Home/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 @{
   ViewData["Title"] = "Home Page";
 }
-<section class="additional-menu container-fluid">
+@* <section class="additional-menu container-fluid">
   <div class="container-fluid">
     <ul class="nav">
       <li class="nav-item">
@@ -23,7 +23,7 @@
       </li>
     </ul>
   </div>
-</section>
+</section> *@
 
 <section class="main-element container-fluid">
   <div class="container-fluid">
