--- a/CosmeticShop/CosmeticShop/Views/ProductContainers/Edit.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/ProductContainers/Edit.cshtml
@@ -4,14 +4,14 @@
     ViewData["Title"] = "Edit";
 }
 
-@* <section class="create-product-container">
+<section class="create-product-container">
     <h2>Редактирование товара</h2>
     <div class="container-prosuct">
         <form asp-action="Edit">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" />
             <div class="row">
                 <div class="col">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    <input type="hidden" asp-for="Id" />
                     <div class="form-group">
                         <label asp-for="ProductName" class="text-lable control-label">Название товара:</label>
                         <input asp-for="ProductName" class="form-input form-control" />
@@ -56,16 +56,19 @@
                         </div> *@
                     @* <div class="form-group">
                         <div>
-                        <label for="countImages" class="text-lable">Количество картинок</label>
-                        <input type="number" name="countImages" id="countImages"
-                        oninput="displayLoadImagesElements()" min="0" class="form-input form-control" />
+                            <label for="countImages" class="text-lable">Количество картинок</label>
+                            <input type="number" name="countImages" id="countImages"
+                                oninput="displayLoadImagesElements()" min="0" class="form-input form-control" />
                         </div>
 
                         <div id="images">
-                        </div>
-                        </div>
+                    </div>
+                        </div> *@
+                    <div class="form-group">
+                        <a asp-action="EditImages" asp-route-id="@Model.Id" class="text-lable-pick">Изменение изображений</a>
+                    </div>
 
-                        @* <div class="example-2">
+                    @* <div class="example-2">
                         <div class="form-group">
                         <input type="file" name="file" id="file" class="input-file">
                         <label for="file" class="btn btn-tertiary js-labelFile">
@@ -74,37 +77,37 @@
                         </label>
                         </div>
                         </div> *@
-                    @* <script>
+                    <script>
                         function displayLoadImagesElements() {
-                        var countImages = document.getElementById('countImages').value;
-                        var loadImagesInnerHtml = document.getElementById('images');
+                            var countImages = document.getElementById('countImages').value;
+                            var loadImagesInnerHtml = document.getElementById('images');
 
 
-                        var html = "";
-                        for (var i = 0; i < countImages; i++) {
-                        html += `<input type="file" class="input-file" name="ProductPictures.Pictures[${i}].Image"/>`;
-                        html += `<input type="radio" name="ProductPictures.PreviewNnmber" value="${i}">`;
+                            var html = "";
+                            for (var i = 0; i < countImages; i++) {
+                                html += `<input type="file" class="input-file" name="ProductPictures.Pictures[${i}].Image"/>`;
+                                html += `<input type="radio" name="ProductPictures.PreviewNnmber" value="${i}">`;
+                            }
+
+                            loadImagesInnerHtml.innerHTML = html;
                         }
-
-                        loadImagesInnerHtml.innerHTML = html;
-                        }
-                        </script> *@
-               @* </div>
+                    </script>
+                </div>
             </div>
             <div class="form-btn form-group">
                 <div class="d-inline">
                     <a asp-action="Index" class="input-back">Вернуться назад</a>
                 </div>
                 <div class="d-inline">
-                    <input type="submit" value="Сохранить" class="btn-create btn" />
+                    <input type="submit" value="Редактировать" class="btn-create btn" />
 
                 </div>
             </div>
         </form>
     </div>
-
-</section> *@
-
+   
+</section>
+@* 
 <h1>Edit</h1>
 
 <h4>ProductContainer</h4>
@@ -162,7 +165,7 @@
 
 <div>
     <a asp-action="Index">Back to List</a>
-</div>
+</div> *@
 
 @section Scripts {
 @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
