Product Categories html

--- a/CosmeticShop/CosmeticShop/Views/ProductContainers/Details.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/ProductContainers/Details.cshtml
@@ -4,6 +4,15 @@
     ViewData["Title"] = "Details";
 }
 
+<section class="details-product-container">
+    <div class="first">
+
+    </div>
+    <div class="second">
+
+    </div>
+</section>
+
 <h1>Details</h1>
 
 <div>
