--- a/CosmeticShop/CosmeticShop/Views/ProductCategories/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/ProductCategories/Index.cshtml
@@ -58,8 +58,8 @@
                         @Html.DisplayFor(modelItem => item.Name)
                     </td>
                     <td>
-                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn-details btn-product">Редактирование</a> |
-                        <a asp-action="Details" asp-route-id="@item.Id" class="btn-edit btn-product">Просмотр</a> |
+                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn-details btn-product">Редактирование</a> 
+                        <a asp-action="Details" asp-route-id="@item.Id" class="btn-edit btn-product">Просмотр</a> 
                         <a asp-action="Delete" asp-route-id="@item.Id" class="btn-delete btn-product">Удаление</a>
                     </td>
                 </tr>
