--- a/CosmeticShop/CosmeticShop/Views/Traiding/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Traiding/Index.cshtml
@@ -28,7 +28,7 @@
         content: "\f053";
     }
 </style>
-<section class="additional-menu container-fluid">
+@* <section class="additional-menu container-fluid">
     <div class="container-fluid">
         <ul class="nav">
             <li class="nav-item">
@@ -47,7 +47,7 @@
                 <a class="nav-link" href="#">Тело</a>
             </li>
         </ul>
-    </div>
+    </div> *@
 </section>
 
 
