--- a/CosmeticShop/CosmeticShop/Views/OrderProcessing/OrdersToDelivery.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/OrderProcessing/OrdersToDelivery.cshtml
@@ -1,13 +1,64 @@
 @model IEnumerable<CosmeticShop.Models.Products.OrderToDelivery>
 
-@foreach (var item in Model)
+@* @foreach (var item in Model)
 {
     <div>
         <p>Номер заказа: @item.Order.Id</p>
         <a asp-action="Details" asp-controller="OrderProcessing" asp-route-id="@item.Order.Id">Детали</a>
-        
+
         <form method="POST" asp-action="ConfirmOrderDelivering" asp-controller="OrderProcessing" asp-route-id="@item.Id">
             <input type="submit" value="Заказ доставлен">
         </form>
     </div>
-}
+} *@
+
+
+<section class="table-order container-myself-info table-add-product">
+
+    <table class="table">
+        <thead>
+            <tr class="mx-auto">
+                <th colspan="3" scope="col">
+                    Данные Заказа
+                </th>
+                <th scope="col">
+                    Просмотр заказа
+                </th>
+                <th scope="col">
+
+                </th>
+            </tr>
+            <tr class="justTh">
+                <th colspan="6"></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <th scope="row">
+                        @item.Order.PersonalData.Surname
+                    </th>
+                    <th scope="row">
+                        @item.Order.PersonalData.PhoneNumber
+                    </th>
+                    <th scope="row">
+                        @(item.Order.PersonalData.Street + ' ' + item.Order.PersonalData.Home + ' ' +
+                    item.Order.PersonalData.Flat)
+                    </th>
+                    <td>
+                        <a asp-action="Details" asp-controller="OrderProcessing" asp-route-id="@item.Order.Id" class="btn-details btn-product">Детали</a>
+                    </td>
+                    <td>
+
+                        <form method="POST" asp-action="ConfirmOrderDelivering" asp-controller="OrderProcessing"
+                        asp-route-id="@item.Id">
+                            <input type="submit" value="Заказ доставлен" class="btn-order">
+                        </form>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
+</section>
