--- a/CosmeticShop/CosmeticShop/Views/Shared/_Layout.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Shared/_Layout.cshtml
@@ -7,15 +7,23 @@
     <title>@ViewData["Title"] - CosmeticShop</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
 
-    <link rel="stylesheet" href="~/css/LayoutHeader.css" />
-    <link rel="stylesheet" href="~/css/LayoutBody.css" />
-    <link rel="stylesheet" href="~/css/LayoutFooter.css" />
+    
     <link rel="stylesheet" href="~/css/ProductContainersIndex.css" />
     <link rel="stylesheet" href="~/css/AdditionalHomeIndex.css" />
-    <link rel="stylesheet" href="~/css/CardProduct.css" />
     <link rel="stylesheet" href="~/css/MainHomeIndex.css" />
     <link rel="stylesheet" href="~/css/TraidingFilter.css" />
     <link rel="stylesheet" href="~/css/CreateEditProduct.css" />
+    <link rel="stylesheet" href="~/css/TraidingIndexProduct.css" />
+    <link rel="stylesheet" href="~/css/CardProduct.css" />
+    <link rel="stylesheet" href="~/css/OrdersToCollect.css" />
+    <link rel="stylesheet" href="~/css/Roles.css" />
+    <link rel="stylesheet" href="~/css/AccountLogReg.css" />
+    <link rel="stylesheet" href="~/css/Orders.css" />
+
+    <link rel="stylesheet" href="~/css/LayoutHeader.css" />
+    <link rel="stylesheet" href="~/css/LayoutBody.css" />
+    <link rel="stylesheet" href="~/css/LayoutFooter.css" />
+    
 
 </head>
 
@@ -35,12 +43,12 @@
                     <div class="navbar-first navbar-nav justify-content-center">
                         <a class="nav-item nav-link active" asp-area="" asp-controller="Home"
                             asp-action="Index">Главная</a>
-                        <a class="nav-item nav-link" asp-area="" asp-controller="Traiding"
+                        <a class="nav-item nav-link active" asp-area="" asp-controller="Traiding"
                             asp-action="Index">Магазин</a>
-                        <a class="nav-item nav-link" asp-area="" asp-controller="" asp-action="Index">Доставка и
+                        <a class="nav-item nav-link active" asp-area="" asp-controller="" asp-action="Index">Доставка и
                             Оплата</a>
-                        <a class="nav-item nav-link" asp-area="" asp-controller="" asp-action="Index">Контакты</a>
-                        <a class="nav-item nav-link" asp-area="" asp-controller="" asp-action="Index">О нас</a>
+                        <a class="nav-item nav-link active" asp-area="" asp-controller="" asp-action="Index">Контакты</a>
+                        <a class="nav-item nav-link active" asp-area="" asp-controller="" asp-action="Index">О нас</a>
 
                     </div>
                     <div class="navbar-second navbar-nav  justify-content-end">
